// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article/TableOfContents Blank smoke-test 1`] = `
<details class="TableOfContents_tableOfContents__mQhnM">
  <summary>
    <strong>
      Table of Contents
    </strong>
  </summary>
  <ul>
  </ul>
</details>
`;

exports[`Article/TableOfContents Default smoke-test 1`] = `
<details class="TableOfContents_tableOfContents__mQhnM">
  <summary>
    <strong>
      Table of Contents
    </strong>
  </summary>
  <ul>
    <li>
      <a href="/#custom-id">
        Heading 1
      </a>
    </li>
    <li class="TableOfContents_depth2__G_V8e">
      <a href="/#undefined">
        Heading 2
      </a>
    </li>
    <li class="TableOfContents_depth3__0IhVA">
      <a href="/#undefined">
        Heading 3
      </a>
    </li>
  </ul>
</details>
`;

exports[`Article/TableOfContents Second smoke-test 1`] = `
<details class="TableOfContents_tableOfContents__mQhnM">
  <summary>
    <strong>
      Table of Contents
    </strong>
  </summary>
  <ul>
    <li>
      <a href="/#undefined">
        Heading 1
      </a>
    </li>
    <li class="TableOfContents_depth3__0IhVA">
      <a href="/#undefined">
        Heading 3
      </a>
    </li>
    <li class="TableOfContents_depth3__0IhVA">
      <a href="/#undefined">
        Heading 3
      </a>
    </li>
    <li class="TableOfContents_depth2__G_V8e">
      <a href="/#undefined">
        Heading 2
      </a>
    </li>
    <li class="TableOfContents_depth4__ZUaHh">
      <a href="/#undefined">
        Heading 4
      </a>
    </li>
    <li class="TableOfContents_depth6__jf0Ig">
      <a href="/#undefined">
        Heading 6
      </a>
    </li>
    <li class="TableOfContents_depth5__szqVc">
      <a href="/#undefined">
        Heading 5
      </a>
    </li>
    <li>
      <a href="/#undefined">
        Heading 1
      </a>
    </li>
  </ul>
</details>
`;
